fixed padding of menu on smaller screens

--- a/_sass/jekyll-theme-architect.scss
+++ b/_sass/jekyll-theme-architect.scss
@@ -386,7 +386,7 @@ footer a:hover {
     width: 93%;
   }
   header {
-    padding: 20px 0;
+    padding: 20px 0 0 0;
   }
   header .inner {
     position: relative;
